syntax = "proto3";

message TargetAddr {
    string host = 1;
    int32 port = 2;
}

message BytesChunk {
	bytes data = 1;
}

message ProxyMessage {
    TargetAddr addr = 1;
    BytesChunk chunk = 2;
    int32 status = 3;
}

service Proxy {
    rpc Forward(stream ProxyMessage) returns (stream BytesChunk);
}
